--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+      window.addEventListener("load",function() {
+        setTimeout(function(){
+          window.scrollTo(0, 0);
+        }, 0);
+      });
+    </script>
   <title>simple shirts</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
@@ -8,7 +17,19 @@
 </head>
 <body>
 
-<%= yield %>
+<div class="container-fluid">
+		<div class="demo-headline">
+	        <h1 class="demo-logo">
+	          <div class="logo"></div>
+	          simple shirts
+	        </h1>
+	    </div> <!-- /demo-headline -->
+	<%= yield %>
+</div>
 
+	<script src="js/dribbble.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      getShotsForID('johnamauro', 'shots', 1);
+    </script>
 </body>
 </html>
