--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,25 +1,27 @@
-<h1>Listing products</h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
 
 <% @products.each do |product| %>
-  <tr>
-    <td><%= product.name %></td>
-    <td><%= product.description %></td>
-    <td><%= link_to 'Show', product %></td>
-    <td><%= link_to 'Edit', edit_product_path(product) %></td>
-    <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+  <div class="row-fluid">
+    <div class="span8">
+      <h1>Products</h1>
+      <div class="product">
+        <strong><%= product.name %></strong>
+        <p><%= product.description %></p>
+        <div class="meta">
+          <%= link_to product.created_at, product %>
+            <span class="admin">
+              | <%= link_to 'Edit', edit_product_path(product) %> |
+              <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </span>
+        </div>
+      </div>
+      <br />
+      <%= link_to 'New Product', new_product_path %>
+    </div>
+  </div>
 <% end %>
-</table>
 
-<br />
 
-<%= link_to 'New Product', new_product_path %>
+
+
+
