Install devise to handle user sign up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
 <body>
 
 <div class="container-fluid">
+	 <p class="notice"><%= notice %></p>
+     <p class="alert"><%= alert %></p>
 		<div class="demo-headline">
 	        <h1 class="demo-logo">
 	          <div class="logo"></div>
