--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,19 @@
 <% @products.each do |product| %>
 <div class="row-fluid">
-    <div class="span8 center">
+    <div class="span8">
     	<div id="shots"></div>
+    </div>
+    <div class="span4">
 	    <div class="product">
 	        <strong><%= product.name %></strong>
 	        <p><%= product.description %></p>
+	        <%= simple_form_for(product) do |f| %>
+	        	<div class="span8 alpha"><%= f.input :size, collection: ["small", "medium", "large"] %></div>
+	        	<div class="span4"><%= f.input :quantity, collection: 1..5 %></div>
+	        	<%= button_tag(type: 'submit', class: "btn btn-large btn-block btn-info") do %>
+        			Buy
+      			<% end %>
+	        <% end %>
 	    </div>
 	</div>
 </div>
