--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,19 @@
 	<%= yield %>
 </div>
 
+<footer>
+    <div class="container-fluid">
+        <div class="row-fluid">
+	        <div class="span8">
+	            <h6 class="footer-copyright">Lightning Bolt &copy; 2013</h6>
+	        </div>
+	        <div class="span4">
+	        	<h6 class="footer-handcrafted">Handcrafted in Austin, TX</h6>
+	        </div>
+	    </div>
+    </div>
+</footer>
+
 	<script src="js/dribbble.js" type="text/javascript"></script>
     <script type="text/javascript">
       getShotsForID('johnamauro', 'shots', 1);
