--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New product</h1>
+<div class"row-fluid">
+	<div class="span8 center">
+		<h1>New product</h1>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', products_path %>
+		<%= render 'form' %>
+
+		<%= link_to 'Back', products_path %>
+	</div>
+</div>
