Connected stripe checkout button to homepage. Added price to product model.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,9 +10,13 @@
 	        <%= simple_form_for(product) do |f| %>
 	        	<div class="span8 alpha"><%= f.input :size, collection: ["small", "medium", "large"] %></div>
 	        	<div class="span4"><%= f.input :quantity, collection: 1..5 %></div>
-	        	<%= button_tag(type: 'submit', class: "btn btn-large btn-block btn-info") do %>
+	        	<script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button"
+          			data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          			data-description="<%= product.name %>"
+          			data-amount="<%= product.price.to_i*100 %>"></script>
+	        	<!-- <%= button_tag(type: 'submit', class: "btn btn-large btn-block btn-info") do %>
         			Buy
-      			<% end %>
+      			<% end %> -->
 	        <% end %>
 	    </div>
 	</div>
