--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -13,6 +13,7 @@
 
   <%= f.input :name %>
   <%= f.input :description %>
+  <%= f.input :price %>
   <div class="actions"">
      <%= button_tag(type: 'submit', class: "btn btn-large btn-block btn-info") do %>
         Create Product
