--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,6 +14,7 @@
       <div class="product">
         <strong><%= product.name %></strong>
         <p><%= product.description %></p>
+        <p><%= product.price %></p>
         <div class="meta">
           <%= link_to product.created_at, product %>
             <span class="admin">
