--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,6 +10,10 @@
   <%= @product.description %>
 </p>
 
+<p>
+  <b>Price:</b>
+  <%= @product.price %>
+</p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
