--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,29 +1,34 @@
 
 <div class="row-fluid">
-  <div class="span8 center">
-    <div class="span4">
+    <div class="span3">
       <%= link_to "New Product", new_product_path, :class => "btn btn-large btn-block btn-info" %>
     </div>
-  </div>
 </div>
 
-<% @products.each do |product| %>
+
   <div class="row-fluid">
-    <div class="span8 center">
+    <div class="products">
       <h1>Products</h1>
-      <div class="product">
-        <strong><%= product.name %></strong>
-        <p><%= product.description %></p>
-        <p><%= product.price %></p>
-        <div class="meta">
-          <%= link_to product.created_at, product %>
-            <span class="admin">
-              | <%= link_to 'Edit', edit_product_path(product) %> |
-              <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-            </span>
-        </div>
-      </div>
-      
+      <% @products.each do |product| %>
+        <ul>
+          <li>
+            <div class="span8">
+              <h2><%= product.name %></h2>
+              <p><%= product.description %></p>
+              <p><strong>Price: <%= number_to_currency(product.price) %></strong></p>
+              <div class="meta">
+                <%= link_to product.created_at, product %>
+                  <span class="admin">
+                    | <%= link_to 'Edit', edit_product_path(product) %> |
+                    <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                  </span>
+              </div>
+            </div>
+            <div class="span4">
+              <%= image_tag product.photo.url(:big) %>
+            </div>
+          </li>
+        </ul>
     </div>
   </div>
 <% end %>
