--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -649,7 +649,8 @@ img {
     .navbar .nav > li > a:hover {
       color: #1abc9c; }
   .navbar .nav li {
-    position: relative; }
+    position: relative;
+    padding: 0px; }
     .navbar .nav li:hover > ul {
       opacity: 1;
       z-index: 100;
