--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@product) do |f| %>
+<%= simple_form_for [:admin, @product], :html => { :multipart => true } do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -10,8 +10,8 @@
       </ul>
     </div>
   <% end %>
-
-  <%= f.file_field :photo %>
+ 
+  <%= f.file_field :upload %>
   <%= f.input :name %>
   <%= f.input :price %>
   <%= f.input :description %>
