--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="row-fluid">
     <div class="span3">
-      <%= link_to "New Product", new_product_path, :class => "btn btn-large btn-block btn-info" %>
+      <%= link_to "New Product", new_admin_product_path, :class => "btn btn-large btn-block btn-info" %>
     </div>
 </div>
 
@@ -17,10 +17,10 @@
               <p><%= product.description %></p>
               <p><strong>Price: <%= number_to_currency(product.price) %></strong></p>
               <div class="meta">
-                <%= link_to product.created_at, product %>
+                <%= link_to product.created_at, admin_product_path(product) %>
                   <span class="admin">
-                    | <%= link_to 'Edit', edit_product_path(product) %> |
-                    <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                    | <%= link_to 'Edit', edit_admin_product_path(product) %> |
+                    <%= link_to 'Destroy', admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></td>
                   </span>
               </div>
             </div>
