--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,4 +1,7 @@
-@import url("http://fonts.googleapis.com/css?family=Lekton");
+@import url("http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic");
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,600");
+
+
 @font-face {
   font-family: "Flat-UI-Icons-16";
   src: url("../fonts/Flat-UI-Icons-16.eot");
@@ -176,12 +179,12 @@
   content: "\e004"; }
 
 body {
-  color: #34495e;
-  font: 100%/1.5 "Lekton", sans-serif; 
+  color: #6F787D;
+  font: 100%/1.5 "Open Sans", sans-serif; 
   text-rendering: optimizeLegibility; }
 
 a {
-  color: #1abc9c;
+  color: #3892E3;
   text-decoration: underline;
   -webkit-transition: 0.25s;
   -moz-transition: 0.25s;
@@ -193,33 +196,43 @@ a {
     text-decoration: none; }
 
 h1 {
+  font-family: 'Arvo', sans-serif; 
+  color: #34495E;
   font-size: 2em;
-  font-weight: 900; }
+  font-weight: 400; }
 
 h2 {
+  font-family: 'Arvo', sans-serif;
+  color: #34495E;
   font-size: 1.625em;
-  font-weight: 700;
+  font-weight: 400;
   margin-bottom: 2px; }
 
 h3 {
+  font-family: 'Arvo', sans-serif;
+  color: #34495E;
   font-size: 1.5em;
-  font-weight: 700;
+  font-weight: 400;
   margin-bottom: 4px;
   margin-top: 2px; }
 
 h4 {
+  font-family: 'Arvo', sans-serif;
+  color: #34495E;
   font-size: 1.125em;
-  font-weight: 500;
+  font-weight: 400;
   margin-top: 4px; }
 
 h5 {
+  font-family: 'Arvo', sans-serif;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 400;
   text-transform: uppercase; }
 
 h6 {
+  font-family: 'Arvo', sans-serif;
   font-size: 0.8125em;
-  font-weight: 500;
+  font-weight: 400;
   text-transform: uppercase; }
 
 .btn {
@@ -303,29 +316,34 @@ h6 {
   color: white; }
 
 
-.demo-headline {
-  padding: 73px 0 110px;
-  text-align: center; }
+.headline {
+  padding: 36px 0;
+  margin-bottom: 48px;
+  text-align: center; 
+  -moz-box-shadow:    0px 1px 0px 0px rgba(210,210,210,0.50);
+  -webkit-box-shadow: 0px 1px 0px 0px rgba(210,210,210,0.50);
+  box-shadow:         0px 1px 0px 0px rgba(210,210,210,0.50); }
 
-.demo-logo {
+.name {
+  font-family: 'Arvo', sans-serif;
+  color: #34495E;
   font-size: 5.625em;
-  font-weight: bold;
-  line-height: 100px; 
-  text-transform: uppercase; }
+  font-weight: 400;
+  line-height: 100px; }
 
-  .demo-logo .logo {
+  .name .logo {
     background: url("logo.svg") center 0 no-repeat;
-    background-size: 256px 256px;
-    height: 256px;
-    margin: 0 auto 26px;
+    background-size: 138px 138px;
+    height: 138px;
+    margin: 0 auto;
     overflow: hidden;
     text-indent: -9999em;
-    width: 256px; 
+    width: 138px; 
     max-width: 100%; 
   }
-  .demo-logo .logo a {
-    height: 256px;
-    width: 256px;
+  .name .logo a {
+    height: 138px;
+    width: 138px;
   }
 
 
@@ -337,7 +355,7 @@ h6 {
 
 .row-fluid [class*="span"].center { float: none; margin-left: auto; margin-right: auto; }
 
-button { font-family: "Lekton", sans-serif; }
+button { font-family: "Arvo", sans-serif; }
 
 select { -webkit-appearance: none; height: 40px; width: 100%; background: #fff; border: 1px solid #979797; border-radius: 20px; }
 
@@ -614,13 +632,16 @@ img {
   .demo-browser {
     background-image: url("../images/demo/browser-2x.png"); } }
 .navbar {
-  font-size: 18px; }
+  font-size: 18px;
+  margin-bottom: 0px; }
   .navbar .brand {
-    color: #1abc9c;
-    font-size: inherit;
-    font-weight: 700;
+    font-family: 'Arvo', sans-serif;
+    color: #34495E;
+    font-size: 2.125em;
+    font-weight: 400;
     padding-bottom: 16px;
-    padding-top: 15px; }
+    padding-top: 15px; 
+    text-decoration: none; }
   .navbar .nav > li:hover > ul {
     top: 100%; }
   .navbar .nav > li > ul {
@@ -647,7 +668,7 @@ img {
   .navbar .nav > li > a {
     padding: 14px 15px 17px; }
     .navbar .nav > li > a:hover {
-      color: #1abc9c; }
+      color: #3892E3; }
   .navbar .nav li {
     position: relative;
     padding: 0px; }
@@ -697,15 +718,21 @@ img {
       text-decoration: none; }
       .navbar .nav ul a:hover {
         background-color: #1abc9c; }
+  .navbar .nav.pull-right {
+    padding-top: 20px; }
+
 
 .navbar-inner {
+  background-color: #fff;
   border: none;
   padding-left: 4px;
   padding-right: 4px;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
+  background-image: none;
+  -moz-box-shadow:    0px 1px 0px 0px rgba(210,210,210,0.50);
+  -webkit-box-shadow: 0px 1px 0px 0px rgba(210,210,210,0.50);
+  box-shadow:         0px 1px 0px 0px rgba(210,210,210,0.50);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false); }
+
 
 .navbar-inverse .navbar-inner {
   background: #34495e;
@@ -909,7 +936,7 @@ input[type="color"],
 .uneditable-input {
   border: 2px solid #dce4ec;
   color: #34495e;
-  font-family: "Lekton", sans-serif;
+  font-family: "Arvo", sans-serif;
   font-size: 14px;
   padding: 8px 0 9px 10px;
   text-indent: 1px;
@@ -1373,7 +1400,7 @@ textarea,
     background: transparent;
     border: none;
     color: #34495e;
-    font-family: "Lekton", sans-serif;
+    font-family: "Arvo", sans-serif;
     font-size: 14px;
     margin: 0px;
     padding: 0 0 0 5px;
@@ -1942,8 +1969,7 @@ footer {
   padding: 26px 0;
   margin-top: 40px; }
   footer a {
-    color: #a1a4a7;
-    font-weight: 700; }
+    color: #a1a4a7; }
   footer p {
     font-size: 1em;
     line-height: 1.25em; }
@@ -1977,12 +2003,10 @@ footer {
 
 .footer-copyright {
   font-size: 0.75em;
-  font-weight: 700;
   padding-top: 40px; }
 
 .footer-handcrafted {
   font-size: 0.75em;
-  font-weight: 700;
   padding-top: 40px;
   text-align: right; }
 
@@ -2039,7 +2063,7 @@ body.vjs-full-window {
   bottom: 4em;
   left: 1em;
   right: 1em;
-  font-family: "Lekton", sans-serif; }
+  font-family: "Arvo", sans-serif; }
 .video-js .vjs-text-track {
   display: none;
   color: white;
@@ -2255,7 +2279,7 @@ body.vjs-full-window {
   height: 20px;
   width: 50px;
   top: 16px;
-  font: 300 13px "Lekton", sans-serif; }
+  font: 300 13px "Arvo", sans-serif; }
 
 .vjs-current-time {
   right: 128px;
