--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
 	        <p><%= product.description %></p>
 	        <%= simple_form_for [:admin, product] do |f| %>
 	        	<div class="span8 alpha"><%= f.input :size, collection: ["small", "medium", "large"] %></div>
-	        	<div class="span4"><%= f.input :quantity, collection: 1..5 %></div>
+	        	<!-- <div class="span4"><%= f.input :quantity, collection: 1..5 %></div> -->
 	        	<script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button"
           			data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           			data-description="<%= product.name %>"
